--- a/src/main/webapp/channel/channel_payment_bill_reprint.xhtml
+++ b/src/main/webapp/channel/channel_payment_bill_reprint.xhtml
@@ -76,7 +76,7 @@
 
                         <h:panelGroup rendered="#{sessionController.institutionPreference.opdBillPaperType eq 'FiveFivePaper'}">
                             <h:panelGroup rendered="#{!sessionController.institutionPreference.pharmacyBillPrabodha}">
-                                <bi:staffBill  controller="#{channelSearchController}" bill="#{channelSearchController.bill}" dup="true"/>
+                                <bi:staffBill_1  controller="#{channelSearchController}" bill="#{channelSearchController.bill}" dup="true"/>
                             </h:panelGroup>
                         </h:panelGroup>
 
