--- a/src/main/webapp/resources/bill/insRecieve.xhtml
+++ b/src/main/webapp/resources/bill/insRecieve.xhtml
@@ -32,11 +32,27 @@
                         <p:panel   id="gpBillPreview" style="border: none;"  >
 
 
-                            <div class="billNamePrinting" style=" position: absolute;left: 25%;top: 30%;font-weight: bold;">
-                                <h:outputLabel value="#{cc.attrs.bill.fromInstitution.name}"   />                       
+                            <div style="position: absolute!important;left: 60%!important; font-weight: bold!important;
+                                 top: 0%!important;font-size: 15px!important; text-decoration: underline!important;">
+                                <h:outputLabel value="Receipt"   />                           
                             </div>
 
-                            <div class="receiptnoPrinting" >                                                  
+                            <div style="position: absolute;
+                                 left: 0%!important;
+                                 top: 7%!important;
+                                 font-size: 12px!important;">
+                                <h:outputLabel value="Receipt No"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 23%;
+                                 top: 7%;
+                                 font-size:12px!important;">
+                                <h:outputLabel value=":"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 25%!important;
+                                 top: 7%!important;
+                                 font-size: 12px!important;">                                                 
                                 <h:outputLabel value="#{cc.attrs.bill.cancelledBill.insId} **Cancelled"  
                                                rendered="#{cc.attrs.bill.cancelledBill.insId ne null}"/> 
                                 <h:outputLabel value="#{cc.attrs.bill.insId}" 
@@ -45,7 +61,22 @@
                                                rendered="#{cc.attrs.bill.cancelledBill.insId eq null and cc.attrs.dup eq true }" />
                             </div>
 
-                            <div class="billdatePrinting">                   
+                            <div style="position: absolute;
+                                 left: 73%!important;
+                                 top: 7%!important;
+                                 font-size: 12px!important;">
+                                <h:outputLabel value="Date"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 82%;
+                                 top: 7%;
+                                 font-size:12px!important;">
+                                <h:outputLabel value=":"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 84%!important;
+                                 top: 7%!important;
+                                 font-size: 12px!important;" >                  
                                 <h:outputLabel value="#{cc.attrs.bill.cancelledBill.billDate}"
                                                rendered="#{cc.attrs.bill.cancelledBill.insId ne null}"  >
                                     <f:convertDateTime pattern="dd/MM/yy"/>
@@ -56,24 +87,80 @@
                                 </h:outputLabel>
                             </div>
 
-                            <div class="paymentPrinting">                    
+                            <div style="position: absolute;
+                                 left: 0%!important;
+                                 top: 11%!important;
+                                 font-size: 12px!important;">
+                                <h:outputLabel value="Payment Type"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 23%;
+                                 top: 11%;
+                                 font-size:12px!important;">
+                                <h:outputLabel value=":"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 25%;
+                                 top: 11%;
+                                 font-size:12px!important;" >                    
                                 <h:outputLabel value="#{cc.attrs.bill.cancelledBill.paymentMethod}" 
                                                rendered="#{cc.attrs.bill.cancelledBill.insId ne null}" />                        
                                 <h:outputLabel value="#{cc.attrs.bill.paymentMethod}" 
                                                rendered="#{cc.attrs.bill.cancelledBill.insId eq null }"/>
                             </div>
 
-                            <div class="billtimePrinting">                                                  
+                            <div style="position: absolute;
+                                 left: 73%!important;
+                                 top: 11%!important;
+                                 font-size: 12px!important;">
+                                <h:outputLabel value="Time"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 82%;
+                                 top: 11%;
+                                 font-size:12px!important;">
+                                <h:outputLabel value=":"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 84%;
+                                 top: 11%;
+                                 font-size:12px!important;" >                                                 
                                 <h:outputLabel value="#{cc.attrs.bill.cancelledBill.billTime}"  
                                                rendered="#{cc.attrs.bill.cancelledBill.insId ne null}">
-                                    <f:convertDateTime pattern="hh mm a"/>
+                                    <f:convertDateTime pattern="hh:mm a"/>
                                 </h:outputLabel>                        
                                 <h:outputLabel value="#{cc.attrs.bill.billTime}" 
                                                rendered="#{cc.attrs.bill.cancelledBill.insId eq null }">
-                                    <f:convertDateTime pattern="hh mm a"/>
+                                    <f:convertDateTime pattern="hh:mm a"/>
                                 </h:outputLabel>
                             </div>
 
+                            <div style="position: absolute;
+                                 left: 0%!important;
+                                 top: 15%!important;
+                                 font-size: 12px!important;">
+                                <h:outputLabel value="Company"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 23%;
+                                 top: 15%;
+                                 font-size:12px!important;">
+                                <h:outputLabel value=":"/>
+                            </div>
+                            <div style="position: absolute;
+                                 left: 25%;
+                                 top: 15%;
+                                 font-size:12px!important;" >                    
+                                 <p:outputLabel value="#{cc.attrs.bill.fromInstitution.name}" />
+                            </div>
+                            
+                            <div style="position: absolute;
+                                 left: 0%!important;
+                                 top: 19%!important;
+                                 font-size: 12px!important;">
+                                <h:outputLabel value="OPD Credit Settlement" rendered="#{cc.attrs.bill.billItems.get(0).patientEncounter eq null}"/>
+                                <h:outputLabel value="BHT Credit Settlement" rendered="#{cc.attrs.bill.billItems.get(0).patientEncounter ne null}"/>
+                            </div>
 
                             <h:outputLabel value="#{cc.attrs.bill.patient.person.nameWithTitle}"
                                            style=" position: absolute;left: 25%;top: 35%;font-weight: bold;">
@@ -91,10 +178,13 @@
                                            styleClass="billNamePrinting"  >
                             </h:outputLabel>
 
-                            <div class="itemsPrintingRuhunu" >
+                            <div style="font-size: 11px;
+                                 position: absolute;
+                                 left: 10%;
+                                 top: 25%;" >
                                 <h:dataTable value="#{cc.attrs.bill.billItems}" var="b" >                                               
                                     <p:column >                                                     
-                                        <p:outputLabel style="font-size: 10px!important" value="#{b.patientEncounter.bhtNo}" rendered="#{b.patientEncounter ne null}"/>
+                                        <p:outputLabel style="font-size: 10px!important" value="#{b.patientEncounter.bhtNo} - " rendered="#{b.patientEncounter ne null}"/>
                                         <p:outputLabel style="font-size: 10px!important" value="#{b.referenceBill.insId}" rendered="#{b.patientEncounter eq null}"/>
                                     </p:column>
                                     <p:column headerText="Patient Name">
@@ -103,32 +193,35 @@
                                     </p:column>                                              
                                 </h:dataTable>
                                 <p:spacer height="5px;"></p:spacer>
-                                <table style="min-width:100%;padding-left: 30px;">
+                                <table style="min-width:100%;">
                                     <tr>
                                         <td style="min-width: 3.5cm;text-align: left;">
                                             <h:outputLabel value="TOTAL"/>
                                         </td>
                                         <td>
-                                            <h:outputLabel value="#{cc.attrs.bill.netTotal}"  style="font-size: 110%; font-weight: bold ; text-align: right;    ">
+                                            <h:outputLabel value="#{cc.attrs.bill.netTotal}"  style="font-size: 110%; font-weight: bold ; text-align: right">
                                                 <f:convertNumber pattern="#,##0.00" />
                                             </h:outputLabel>
                                         </td>
                                     </tr>
                                 </table>
-                                <p:spacer height="20px;"></p:spacer>
-                                <table style="min-width:100%;padding-left: 30px;">
+                                <p:spacer height="25px;"></p:spacer>
+                                <table style="min-width:100%;">
                                     <tr>
-                                        <td style="min-width: 5cm;text-align: left; text-decoration: overline;">
-                                            <h:outputLabel value="Cashier : #{cc.attrs.bill.creater.code}"/>
+                                        <td style="min-width: 3cm; text-decoration: overline;">
+                                            <p:outputLabel value="Cashier : #{cc.attrs.bill.creater.code}" style="font-size: 11px!important;"/>
                                         </td>
-                                        <td style="text-align: left; text-decoration: overline;">
-                                            <h:outputLabel value="#{cc.attrs.bill.fromInstitution.name}"/>
+                                        <td style="min-width: 5cm;text-decoration: overline;width: 75%!important;" >
+                                            <p:outputLabel value=""  style="font-size: 11px!important;"/>
                                         </td>
                                     </tr>
                                 </table>
                             </div>
 
-                            <div class="ratesPrintingRuhunu" >
+                            <div style="font-size: 11px;
+                                 position: absolute;
+                                 left: 80%;
+                                 top: 25%;" >
                                 <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip1" >
                                     <h:column>
                                         <h:outputLabel value="#{bip1.netValue}"  style="font-size: 10px!important; float: right;" >
@@ -136,7 +229,7 @@
                                         </h:outputLabel>
                                     </h:column>
                                 </h:dataTable>
-                                
+
                             </div>
 
                         </p:panel>
