--- a/src/main/webapp/resources/bill/opdBillPrintRuhunu.xhtml
+++ b/src/main/webapp/resources/bill/opdBillPrintRuhunu.xhtml
@@ -17,16 +17,19 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
 
-
         <h:panelGroup>
             <h:outputStylesheet library="css" name="printing.css"></h:outputStylesheet>
 
             <div class="fiveinchbillBreakRuhunu">
                 <h:panelGroup id="gpBillPreview" >
 
+                    <div style="position: absolute!important;left: 70%!important; font-weight: bold!important;
+                         top: 0%!important;font-size: 15px!important; text-decoration: underline!important;">
+                        <h:outputLabel value="OPD Invoice"/>
+                    </div>
                     <div style="position: absolute!important;left: 50%!important; font-weight: bold!important;
-                         top: 3%!important;font-size: 15px!important; text-decoration: underline!important;">
-                        <h:outputLabel value="Receipt "/>
+                         top: 4%!important;font-size: 8px!important;">
+                        <h:outputLabel value="VAT Reg. No : 114103438-7000"/>
                     </div>
                     <div class="errorMessage" >
                         <h:outputLabel rendered="#{cc.attrs.bill.transError}"
@@ -37,17 +40,27 @@
                                        top: 2.0%!important;"
                                        value=" THIS BILL IS NOT VALID PLEASE CANCEL"/>
                     </div>
-                    <div class="receiptnoPrintingLabel">
+
+                    <div style="position: absolute;
+                         left: 0%!important;
+                         top: 7%!important;
+                         font-size: 12px!important;">
                         <h:outputLabel value="Receipt No"/>
                     </div>
-                    <div class="receiptnoPrintingLabelCol">
+                    <div style="position: absolute;
+                         left: 23%;
+                         top: 7%;
+                         font-size:12px!important;">
                         <h:outputLabel value=":"/>
                     </div>
-                    <div  class="receiptnoPrinting2">
+                    <div style="position: absolute;
+                         left: 25%!important;
+                         top: 7%!important;
+                         font-size: 12px!important;">
+
                         <h:outputLabel value="#{cc.attrs.bill.insId}" rendered="#{cc.attrs.dup eq false}"/>
 
-
-                        <h:outputLabel value="#{cc.attrs.bill.cancelledBill.insId} **Cancelled"  
+                        <h:outputLabel value="#{cc.attrs.bill.cancelledBill.insId} *Cancelled"  
                                        rendered="#{cc.attrs.bill.cancelledBill.insId ne null 
                                                    and cc.attrs.bill.cancelled eq true}"/> 
 
@@ -55,16 +68,31 @@
                                        rendered="#{cc.attrs.bill.refundedBill.insId ne null 
                                     and cc.attrs.bill.refunded eq true}"/> -->
 
-
-                        <h:outputLabel value="#{cc.attrs.bill.insId} **Duplicate" 
+                        <h:outputLabel value="#{cc.attrs.bill.insId} *Duplicate" 
                                        rendered="#{cc.attrs.bill.refundedBill.insId eq null and
                                                    cc.attrs.bill.cancelledBill.insId eq null 
                                                    and cc.attrs.dup eq true}"/>
-                        <h:outputLabel value="**Refunded" 
+
+                        <h:outputLabel value="*Refunded" 
                                        rendered="#{cc.attrs.bill.billClassType eq 'RefundBill'}"/>
                     </div>
 
-                    <div class="billdatePrintingRuhunu" >                       
+                    <div style="position: absolute;
+                         left: 73%!important;
+                         top: 7%!important;
+                         font-size: 12px!important;">
+                        <h:outputLabel value="Date"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 82%;
+                         top: 7%;
+                         font-size:12px!important;">
+                        <h:outputLabel value=":"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 84%!important;
+                         top: 7%!important;
+                         font-size: 12px!important;" >  
 
                         <h:outputLabel value="#{cc.attrs.bill.billDate}">
                             <f:convertDateTime pattern="dd/MM/yy"/>
@@ -72,20 +100,43 @@
 
                     </div>
 
-                    <div class="paymentPrintingRuhunu" >
+                    <div style="position: absolute;
+                         left: 0%!important;
+                         top: 11%!important;
+                         font-size: 12px!important;">
+                        <h:outputLabel value="Payment Type"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 23%;
+                         top: 11%;
+                         font-size:12px!important;">
+                        <h:outputLabel value=":"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 25%;
+                         top: 11%;
+                         font-size:12px!important;" >
                         <h:panelGroup>
                             <h:outputLabel value="#{cc.attrs.bill.paymentMethod}" />                                
                         </h:panelGroup>
                     </div>
 
-                    <div class="referenceInstitutionPrintingRuhunu" >
-                        <h:panelGroup>
-                            <h:outputLabel value="#{cc.attrs.bill.referredByInstitution.name}"/>                              
-                        </h:panelGroup>
+                    <div style="position: absolute;
+                         left: 73%!important;
+                         top: 11%!important;
+                         font-size: 12px!important;">
+                        <h:outputLabel value="Time"/>
                     </div>
-
-
-                    <div class="billtimePrintingRuhunu" >      
+                    <div style="position: absolute;
+                         left: 82%;
+                         top: 11%;
+                         font-size:12px!important;">
+                        <h:outputLabel value=":"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 84%;
+                         top: 11%;
+                         font-size:12px!important;" >      
 
                         <h:outputLabel value="#{cc.attrs.bill.billTime}">
                             <f:convertDateTime pattern="hh:mm a"/>
@@ -93,33 +144,91 @@
 
                     </div>
 
-                    <div class="ptnamePrintingRuhunu" >
+                    <div style="position: absolute;
+                         left: 0%!important;
+                         top: 15%!important;
+                         font-size: 12px!important;">
+                        <h:outputLabel value="Patient Name"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 23%;
+                         top: 15%;
+                         font-size:12px!important;">
+                        <h:outputLabel value=":"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 25%;
+                         top: 15%;
+                         font-size:12px!important;" >
                         <h:outputLabel value="#{cc.attrs.bill.patient.person.nameWithTitle}"  >
                         </h:outputLabel>
                     </div>
 
-                    <div class="phonePrintingRuhunu" >
-                        <h:outputLabel value="#{cc.attrs.bill.patient.person.phone}"
-                                       >
-                        </h:outputLabel>
+                    <div style="position: absolute;
+                         left: 73%!important;
+                         top: 15%!important;
+                         font-size: 12px!important;">
+                        <h:outputLabel value="Ref. Ins." rendered="#{cc.attrs.bill.referredByInstitution ne null}"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 82%;
+                         top: 15%;
+                         font-size:12px!important;">
+                        <h:outputLabel value=":" rendered="#{cc.attrs.bill.referredByInstitution ne null}"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 84%;
+                         top: 15%;
+                         font-size:12px!important;" >
+                        <h:panelGroup>
+                            <h:outputLabel value="#{cc.attrs.bill.referredByInstitution.name}" rendered="#{cc.attrs.bill.referredByInstitution ne null}"/>                              
+                        </h:panelGroup>
                     </div>
 
-                    <div style="text-decoration: overline;
-                         position:absolute!important;
-                         left:25%!important;
-                         bottom:3%!important;">
-                        <h:outputLabel value="Cashier : #{cc.attrs.bill.creater.code}">
-                        </h:outputLabel>
+                    <div style="position: absolute;
+                         left: 0%!important;
+                         top: 19%!important;
+                         font-size: 12px!important;">
+                        <h:outputLabel value="Patient Tel." rendered="#{cc.attrs.bill.patient.person.phone ne null and cc.attrs.bill.patient.person.phone ne ''}"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 23%;
+                         top: 19%;
+                         font-size:12px!important;">
+                        <h:outputLabel value=":" rendered="#{cc.attrs.bill.patient.person.phone ne null and cc.attrs.bill.patient.person.phone ne ''}"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 25%;
+                         top: 19%;
+                         font-size:12px!important;" >
+                        <h:outputLabel value="#{cc.attrs.bill.patient.person.phone}" rendered="#{cc.attrs.bill.patient.person.phone ne null and cc.attrs.bill.patient.person.phone ne ''}" />
                     </div>
 
-                    <div class="consultPrintingRuhunu" >
-                        <h:outputLabel value="#{cc.attrs.bill.collectingCentre.name}" />
-                        <h:outputLabel value="#{cc.attrs.bill.creditCompany.name}" />
+                    <div style="position: absolute;
+                         left: 0%!important;
+                         top: 23%!important;
+                         font-size: 12px!important;">
+                        <h:outputLabel value="Credit Comp." rendered="#{cc.attrs.bill.creditCompany ne null}"/>
+                        <h:outputLabel value="Col. Cen." rendered="#{cc.attrs.bill.collectingCentre ne null}"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 23%;
+                         top: 23%;
+                         font-size:12px!important;">
+                        <h:outputLabel value=":" rendered="#{cc.attrs.bill.creditCompany ne null or cc.attrs.bill.collectingCentre ne null}"/>
+                    </div>
+                    <div style="position: absolute;
+                         left: 25%;
+                         top: 23%;
+                         font-size:12px!important;" >
+                        <h:outputLabel value="#{cc.attrs.bill.collectingCentre.name}" rendered="#{cc.attrs.bill.collectingCentre ne null}"/>
+                        <h:outputLabel value="#{cc.attrs.bill.creditCompany.name}" rendered="#{cc.attrs.bill.creditCompany ne null}"/>
                     </div>
 
-
-
-                    <div class="itemsPrintingRuhunu" >
+                    <div style="position: absolute;
+                         left: 12%;
+                         top: 34%;
+                         font-size:12px!important;" >
                         <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip"   >
                             <h:column >
 
@@ -138,7 +247,10 @@
                         </h:dataTable>
                     </div>
 
-                    <div class="ratesPrintingRuhunu"  >
+                    <div style="position: absolute;
+                         left: 80%;
+                         top: 34%;
+                         font-size:12px!important;" >
                         <h:dataTable value="#{cc.attrs.bill.billItems}" var="bip1"  >
                             <h:column >
                                 <h:outputLabel  rendered="#{bip1.bill.id eq cc.attrs.bill.id}"  value="#{bip1.grossValue}"  style="font-size: 11px!important;" >
@@ -211,10 +323,10 @@
                             </tr>
                             <tr>
                                 <td style="text-align: left; min-width: 3cm;">
-                                    <h:outputLabel value="VAT (15%)" style="text-align: right!important; font-size: 15px!important;" rendered="#{cc.attrs.bill.vat ne 0.0}"/>
+                                    <h:outputLabel value="VAT (15%)" style="text-align: right!important; font-size: 12px!important;" rendered="#{cc.attrs.bill.vat ne 0.0}"/>
                                 </td>
                                 <td style="text-align: right!important; ">
-                                    <h:outputLabel value="#{cc.attrs.bill.vat}" style="text-align: right!important; font-size: 15px!important;" rendered="#{cc.attrs.bill.vat ne 0.0}">
+                                    <h:outputLabel value="#{cc.attrs.bill.vat}" style="text-align: right!important; font-size: 12px!important;" rendered="#{cc.attrs.bill.vat ne 0.0}">
                                         <f:convertNumber pattern="#,##0.00" />
                                     </h:outputLabel>
                                 </td>
@@ -236,23 +348,17 @@
 
                     </div>
 
-
-
-
-
-
+                    <div style="text-decoration: overline;
+                         position:absolute!important;
+                         left:20%!important;
+                         bottom:1%!important;">
+                        <h:outputLabel value="Cashier : #{cc.attrs.bill.creater.code}">
+                        </h:outputLabel>
+                    </div>
 
                 </h:panelGroup>
             </div>
         </h:panelGroup>                
-
-
-
-
-
-
-
-
 
     </cc:implementation>
 </html>
