Signed-off-by: lahirumadushanka2100 <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -1035,7 +1035,7 @@
                                             </div>
                                             <div>
                                                 <h:panelGroup rendered="#{sessionController.institutionPreference.channelBillPaperType eq 'FiveFivePaper' and sessionController.institutionPreference.applicationInstitution eq 'Ruhuna'}" >
-                                                    <ch:channelRecipt_ruhunu bill="#{channelBillController.printingBill}" dup="false"/>
+                                                    <ch:channelRecipt_ruhunu_1 bill="#{channelBillController.printingBill}" dup="false"/>
                                                 </h:panelGroup>
                                             </div>
                                             <!--                                            <div >
